--- a/Crab/Crab/Base.lproj/Main.storyboard
+++ b/Crab/Crab/Base.lproj/Main.storyboard
@@ -1,24 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X1P-WD-mfP">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Info View Controller-->
+        <scene sceneID="FF9-yg-Z6v">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="Fh3-GC-gZa" customClass="InfoViewController" customModule="Crab" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SxU-Dk-94B">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="kwx-D1-1x1"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qqO-2v-9oX">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="26I-4d-uie">
+                            <connections>
+                                <segue destination="xpu-s2-bWL" kind="show" id="19T-am-cG6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="blz-Ml-DO0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="497" y="962"/>
+        </scene>
+        <!--Play-->
+        <scene sceneID="UPK-Aj-dA0">
+            <objects>
+                <viewController id="Yjm-H7-nC0" customClass="GameViewController" customModule="Crab" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OxH-4R-qrs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="66i-p4-fdh"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Play" image="game_controller" id="hpQ-Os-30t"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AIb-H0-R5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1367" y="176"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="9jt-v1-pcl">
+            <objects>
+                <tabBarController id="X1P-WD-mfP" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Xm8-Hm-O0G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Yjm-H7-nC0" kind="relationship" relationship="viewControllers" id="2v6-Ar-LTY"/>
+                        <segue destination="VOq-Gr-6lC" kind="relationship" relationship="viewControllers" id="iPM-Us-H2f"/>
+                        <segue destination="hW3-11-2ba" kind="relationship" relationship="viewControllers" id="TXO-iH-3We"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mQo-Zd-The" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1366" y="-672"/>
+        </scene>
+        <!--Setting-->
+        <scene sceneID="Hl6-RI-dVo">
+            <objects>
+                <viewController id="hW3-11-2ba" customClass="SettingsViewController" customModule="Crab" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lgF-cG-NQE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="BlO-f8-fvo"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Setting" image="settings" id="KX7-wp-VyP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cec-GL-874" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2214" y="176"/>
+        </scene>
+        <!--Info-->
+        <scene sceneID="YKT-XA-Kfo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VOq-Gr-6lC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Info" image="info" id="wSs-J8-tEg"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ecf-Ky-THR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Fh3-GC-gZa" kind="relationship" relationship="rootViewController" id="Hc9-ma-VsR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Ci-85-mN1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="495" y="176"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="1nu-Ta-y6s">
+            <objects>
+                <viewController id="xpu-s2-bWL" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oFR-ad-W5b">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="3DG-V7-jaO"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="9Lc-vt-RVn">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="ik9-nU-1Y4">
+                            <connections>
+                                <segue destination="Qnh-2h-wrt" kind="show" id="tYz-UO-oMf"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tHS-D2-OK1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1361" y="962"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="Utn-eX-3Jt">
+            <objects>
+                <viewController id="Qnh-2h-wrt" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VeR-7z-bZs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="W0I-CJ-CIj"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="xk0-Cw-kBl">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="Te8-eN-T2l"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bad-Jz-TXW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2233" y="962"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="game_controller" width="30" height="30"/>
+        <image name="info" width="30" height="30"/>
+        <image name="settings" width="30" height="30"/>
+    </resources>
 </document>
